# waschooldata

./: .Rbuildignore  .gitignore  404.html  CLAUDE.html  CLAUDE.md  DATA-CATEGORY-TAXONOMY.html  DESCRIPTION  LICENSE-text.html  LICENSE.html  README.md  TODO.html  TODO.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
Meta/: vignette.rds
R/: cache.R  fetch_directory.R  fetch_enrollment.R  get_raw_enrollment.R  process_enrollment.R  tidy_enrollment.R  utils.R  waschooldata-package.R
articles/: enrollment_hooks.html  enrollment_hooks.md  index.html  index.md
doc/: enrollment_hooks.R  enrollment_hooks.Rmd  enrollment_hooks.html
man/: aggregate_grade_data.Rd  build_cache_path_directory.Rd  build_socrata_url.Rd  cache_exists_directory.Rd  clean_column_names.Rd  clear_cache.Rd  clear_directory_cache.Rd  create_grade_columns.Rd  create_state_aggregate.Rd  download_socrata_data.Rd  fetch_directory.Rd  fetch_enr.Rd  find_directory_col.Rd  format_school_year.Rd  get_available_years.Rd  get_dataset_id.Rd  get_directory_entities.Rd  get_eds_directory.Rd  get_raw_enr.Rd  get_wa_column_map.Rd  merge_eds_contact_tidy.Rd  merge_eds_data.Rd  normalize_district_name.Rd  parse_eds_html.Rd  parse_school_year.Rd  process_directory.Rd  process_enr.Rd  read_cache_directory.Rd  safe_numeric.Rd  standardize_grade_level.Rd  waschooldata-package.Rd  write_cache_directory.Rd
pywaschooldata/: README.md  core.py  pyproject.toml
pywaschooldata/pywaschooldata/: __init__.py  core.py
reference/: aggregate_grade_data.html  (+77 more)
(+197 files in other folders)
